--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body class="min-h-screen">
     <main id="game-container" class="min-h-screen">
-        <div class="absolute bottom-4 left-1/2 -translate-x-1/2 row space-x-6">
-            <img src="./images/bin-1.png" id="bin-1" class="h-48 w-32">
-            <img src="./images/bin-2.png" id="bin-2" class="h-48 w-32">
+        <div class="absolute bottom-4 left-1/2 -translate-x-1/2 row space-x-6 min-w-max-content">
+            <img src="./images/bin-1.png" id="bin-1" class="h-56 w-32">
+            <img src="./images/bin-2.png" id="bin-2" class="h-56 w-32">
         </div>
     </main>
 </body>
