fixing counter for left side of screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="min-h-screen">
     <main id="game-container" class="min-h-screen">
-        <div id="lives" class="text-red-500 text-2xl"></div>
+        <!-- <div id="lives" class="text-red-500 text-2xl"></div> -->
         <div class="absolute bottom-4 left-1/2 -translate-x-1/2 row space-x-6 min-w-max-content">
             <img src="./images/bin-1.png" id="bin-1" class="h-56 w-32">
             <img src="./images/bin-2.png" id="bin-2" class="h-56 w-32">
